<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.details.MovieDetailsFragment"
    android:background="@color/colorBlack"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/connection_error"
            android:visibility="gone"/>

        <ScrollView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayout">


                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_gravity="center"
                    android:scaleType="matrix"
                    android:src="@mipmap/logo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/movie"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movie_tagline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_title"
                        android:layout_gravity="center_horizontal"
                        android:textSize="16sp"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"/>

                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/rating"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/movie_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/colorWhite"
                        tools:text="9"
                        android:textSize="14sp"/>

                </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/status"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="4dp"
                            android:textColor="@color/colorWhite"
                            tools:text="Released"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/release_date"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="4dp"
                            tools:text="2020"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="21dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/runtime"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/movie_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="4dp"
                            tools:text="1.5 hour"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/budget"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_budget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="4dp"
                            android:textColor="@color/colorWhite"
                            tools:text="100.000"
                            android:textSize="14sp"/>

                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/overview"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/movie_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        tools:text="@string/large_text"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>